# gtest-example

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  build_run.sh
code/inc/: easy_math.h
code/src/: easy_math.cpp
test/inc/: common.h  fixture_tests.h  parametric_tests.h
test/src/: failing_tests.cpp  fixture_tests.cpp  parametric_tests.cpp  simple_tests.cpp
